--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,6 @@ main: me.spikey.redstoneremover.Main
 name: SpikeyRedstoneRemover
 version: 1.0
 api-version: 1.13
+author: SpikeyNoob
+website: https://discord.gg/Ax8WuvV
 
